<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:key="category_sensor_offset"
        android:title="@string/category_sensor_offset_title"/>

    <com.esp.uvc.old.widget.TextDialogPreference
        android:key="sensor_offset_read"
        android:title="@string/sensor_offset_read_title" />

    <Preference
        android:key="sensor_offset_write"
        android:title="@string/sensor_offset_write_title" />

    <PreferenceCategory android:key="category_rectify_table"
        android:title="@string/category_rectify_table_title"/>

    <com.esp.uvc.old.widget.TextDialogPreference
        android:key="rectify_table_read"
        android:title="@string/rectify_table_read_title" />

    <Preference
        android:key="rectify_table_write"
        android:title="@string/rectify_table_write_title" />

    <PreferenceCategory android:key="category_zd_table"
        android:title="@string/category_zd_table_title"/>

    <!--<Preference-->
        <!--android:key="zd_table_read"-->
        <!--android:title="@string/zd_table_read_title" />-->
    <com.esp.uvc.old.widget.TextDialogPreference
        android:key="zd_table_read"
        android:title="@string/zd_table_read_title" />

    <Preference
        android:key="zd_table_write"
        android:title="@string/zd_table_write_title" />

    <PreferenceCategory android:key="category_log"
        android:title="@string/category_log_title"/>

    <com.esp.uvc.old.widget.TextDialogPreference
        android:key="rectify_log_read"
        android:title="@string/rectify_log_read_title" />
    <Preference
        android:key="rectify_log_write"
        android:title="@string/rectify_log_write_title" />
<!--    <Preference
        android:selectable="false"
        android:enabled="true"
        android:key="output_textview"
        android:title="Log output:"
        android:summary="" />-->





</PreferenceScreen>