<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_preview_image"
        style="@style/item_2_lines">

        <TextView
            style="@style/item_title"
            android:text="@string/settings_main_preview_image_title" />

        <TextView
            style="@style/item_subtitle"
            android:text="@string/settings_main_preview_image_subtitle" />

    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/layout_sensor_settings"
        style="@style/item_2_lines">

        <TextView
            style="@style/item_title"
            android:text="@string/settings_main_camera_sensor_title" />

        <TextView
            style="@style/item_subtitle"
            android:text="@string/settings_main_camera_sensor_subtitle" />

    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/layout_ply_viewer"
        style="@style/item_2_lines">

        <TextView
            style="@style/item_title"
            android:text="@string/settings_main_ply_viewer" />

        <TextView
            style="@style/item_subtitle"
            android:text="@string/settings_main_ply_viewer_subtitle" />

    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/layout_firmware_version"
        style="@style/item_2_lines">

        <TextView
            style="@style/item_title"
            android:text="@string/settings_main_firmware_version_title" />

        <TextView
            style="@style/item_subtitle"
            android:text="@string/settings_main_firmware_version_subtitle" />

    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/layout_firmware_register"
        style="@style/item_2_lines">

        <TextView
            style="@style/item_title"
            android:text="@string/settings_main_firmware_register_title" />

        <TextView
            style="@style/item_subtitle"
            android:text="@string/settings_main_firmware_register_subtitle" />

    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/layout_firmware_table"
        style="@style/item_2_lines">

        <TextView
            style="@style/item_title"
            android:text="@string/settings_main_firmware_table_title" />

        <TextView
            style="@style/item_subtitle"
            android:text="@string/settings_main_firmware_table_subtitle" />

    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/layout_software_version"
        style="@style/item_2_lines">

        <TextView
            style="@style/item_title"
            android:text="@string/settings_main_software_version_title" />

        <TextView
            style="@style/item_subtitle"
            android:text="@string/settings_main_software_version_subtitle" />

    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/layout_module_sync"
        style="@style/item_2_lines">

        <TextView
            style="@style/item_title"
            android:text="@string/settings_main_module_sync_title" />

        <TextView
            style="@style/item_subtitle"
            android:text="@string/settings_main_module_sync_subtitle"/>

    </LinearLayout>

    <include layout="@layout/divider" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/app_detail_background" />

</LinearLayout>
