<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.esp.uvc.old.usbcamera.FirmwareUpdateSettings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kdc_text"
                android:id="@+id/textView1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kdc_sel_1"
                android:id="@+id/kdc_checkbox_1"
                android:layout_below="@+id/textView1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kdc_sel_2"
                android:id="@+id/kdc_checkbox_2"
                android:layout_toEndOf="@+id/kdc_checkbox_1"
                android:layout_alignTop="@+id/kdc_checkbox_1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kdc_sel_3"
                android:id="@+id/kdc_checkbox_3"
                android:layout_toEndOf="@+id/kdc_checkbox_2"
                android:layout_alignTop="@+id/kdc_checkbox_2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kdc_sel_4"
                android:id="@+id/kdc_checkbox_4"
                android:layout_below="@+id/kdc_checkbox_1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kdc_sel_5"
                android:id="@+id/kdc_checkbox_5"
                android:layout_toEndOf="@+id/kdc_checkbox_4"
                android:layout_alignStart="@+id/kdc_checkbox_2"
                android:layout_alignTop="@+id/kdc_checkbox_4" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kdc_sel_6"
                android:id="@+id/kdc_checkbox_6"
                android:layout_toEndOf="@+id/kdc_checkbox_5"
                android:layout_alignStart="@+id/kdc_checkbox_3"
                android:layout_alignTop="@+id/kdc_checkbox_5" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_fw_tag"
                android:id="@+id/checkbox_set_fw_tag"
                android:layout_alignStart="@+id/kdc_checkbox_1"
                android:layout_below="@+id/kdc_checkbox_4" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kdc_isp"
                android:id="@+id/checkbox_isp"
                android:layout_alignStart="@+id/kdc_checkbox_5"
                android:layout_below="@+id/kdc_checkbox_4" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_read"
                android:id="@+id/read_button"
                android:layout_below="@+id/checkbox_set_fw_tag" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_write"
                android:id="@+id/write_button"
                android:layout_toEndOf="@+id/read_button"
                android:layout_alignTop="@+id/read_button" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_write_from_backup"
                android:id="@+id/write_from_backup_button"
                android:layout_toEndOf="@+id/write_button"
                android:layout_alignTop="@+id/write_button" />

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">>

        <ProgressBar
            android:id="@+id/loadingPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:indeterminate="true" />
    </RelativeLayout>
</LinearLayout>
