<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView android:id="@+id/app_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/software_app_version"/>

        <TextView android:id="@+id/sdk_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/software_sdk_version"/>

        <TextView android:id="@+id/license"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/software_version_license"/>

        <TextView android:id="@+id/cliam"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/software_version_claim2"/>

        <TextView android:id="@+id/connectedCamera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/unknown"/>

    </LinearLayout>

</LinearLayout>
