<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:focusable="true" 
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <TextView android:id="@+id/fw_version_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/firmware_version_settings_text"/>

        <TextView android:id="@+id/fw_version_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/firmware_version_settings_unknown"/>

        <TextView android:id="@+id/productIdText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/firmware_version_settings_product_id"/>

        <EditText android:id="@+id/product_id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:digits="0123456789ABCDEF"
            android:inputType="textCapCharacters"
            android:textSize="24sp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView android:id="@+id/vendorIdText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/firmware_version_settings_vendor_id"/>

        <EditText android:id="@+id/vendor_id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:digits="0123456789ABCDEF"
            android:inputType="textCapCharacters"
            android:textSize="24sp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView android:id="@+id/serialnum_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/firmware_version_settings_serialnum"/>

        <EditText android:id="@+id/serialnum_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"
            android:textSize="24sp"
            android:maxLength="126"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:dividerPadding="8dip"
        android:orientation="horizontal">
        <Button android:id="@+id/read_button"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/btn_get"/>
        <Button android:id="@+id/write_button"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/btn_set"/>
    </LinearLayout>

</LinearLayout>
